--- a/node/scss/_modal.scss
+++ b/node/scss/_modal.scss
@@ -5,24 +5,31 @@ $max-width: 95vw;
 $max-height: 95vh;
 
 $small-width: 400px;
-$medium-width: 800px;
-$large-width: 1200px;
+$medium-width: 600px;
+$large-width: 800px;
+$extra-large-width: 1200px;
 
 $backdrop: rgba(0, 0, 0, .15);
-$background-modal: #f5f5f5;
+$background-modal: #fff;
 $border-modal: 1px solid #f9f9f9;
 
 dialog {
-    all: revert;
-    height: auto;
+    display: block;
+    height: fit-content;
     max-height: $max-height;
     background-color: $background-modal;
     border: $border-modal;
-    width: max($medium-width, $max-width);
+    width: min($medium-width, $max-width);
+    border-radius: .75rem;
+    margin: auto;
+
+    position: fixed;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
 
     opacity: 0;
     transition: all .2s;
-    transform: translate(0) scale(.95);
+    transform: translate(0) scale(.98);
 
     &[data-size=s] {
         width: max($small-width, $max-width);
@@ -31,6 +38,9 @@ dialog {
         width: max($medium-width, $max-width);
     }
     &[data-size=l] {
+        width: max($large-width, $max-width);
+    }
+    &[data-size=xl] {
         width: max($large-width, $max-width);
     }
 
@@ -53,7 +63,29 @@ dialog {
         position: absolute;
         top: 0px;
         inset-inline-end: 0px;
-        margin-top: $gap-4;
-        margin-inline-end: $gap-4;
+        margin-inline-end: 1rem;
+        margin-top: 1rem;
+
+        display: flex;
+        align-items: center;
+
+        > button {
+            padding: 0;
+            width: 32px;
+            height: 32px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: .375rem;
+
+            svg {
+                width: .75rem;
+            }
+
+            &:hover {
+                background-color: color-mix(in oklab, oklch(.274 .006 286.033) 5%, transparent);
+            }
+        }
     }
 }
