--- a/node/scss/_toastr.scss
+++ b/node/scss/_toastr.scss
@@ -6,30 +6,43 @@ $border-toastr: 1px solid oklch(.92 .004 286.32);
 
 div[data-compo-toastr] {
     position: fixed;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+    width: fit-content;
+    height: fit-content;
+    color: canvastext;
+    background-color: canvas;
+    inset: 0px;
+    margin: auto;
+    border-width: initial;
+    border-style: solid;
+    border-color: initial;
+    border-image: initial;
+    border: none !important;
+    background-color: transparent !important;
+    padding: $gap-6;
+    overflow: auto;
 
-    padding: 24px;
-    padding-top: 96px;
+    padding-top: $gap-24;
+
+    margin: 0;
 
     opacity: 0;
     transition: all .2s;
 
     &[data-show] {
         opacity: 1;
-        transform: translateX(0);
+        transform: translateY(0);
         transition: all .35s;
+
+        overlay: auto !important;
     }
 
     #toastr {
         max-width: 400px;
         padding: 10px;
-        border-radius: 12px;
-        box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px;
+        border-radius: 8px;
         background-color: $background-toastr;
-        border: $border-toastr;
+        border: 1px solid #f9f9f9;
+        box-shadow: 0 0 1em rgba(0, 0, 0, .15);
 
         &-container {
             display: flex;
@@ -38,6 +51,7 @@ div[data-compo-toastr] {
 
             &-content {
                 display: flex;
+                flex-direction: column;
                 flex: 1;
                 padding-inline-start: $gap-2-5;
                 padding-block: $gap-1-5;
@@ -71,6 +85,10 @@ div[data-compo-toastr] {
                     justify-content: center;
                     border-radius: .375rem;
 
+                    svg {
+                        width: .75rem;
+                    }
+
                     &:hover {
                         background-color: color-mix(in oklab, oklch(.274 .006 286.033) 5%, transparent);
                     }
@@ -82,13 +100,13 @@ div[data-compo-toastr] {
     &[data-position=top-left],
     &[data-position=top-right] {
         margin-bottom: auto;
-        transform: translateX(-10px);
+        transform: translateY(10px);
     }
 
     &[data-position=bottom-left],
     &[data-position=bottom-right] {
         margin-top: auto;
-        transform: translateX(10px);
+        transform: translateY(-10px);
     }
 
     &[data-position=top-left],
